# ybc-cp

./: .gitmodules  Cargo.toml  Trunk.toml  index-ee66b8634b7e1a88.css  index.html  ybc_cp-10838536f1faea53.js  ybc_cp-10838536f1faea53_bg.wasm  ybc_cp-c33459f3ce90bc7f.js  ybc_cp-c33459f3ce90bc7f_bg.wasm
.github/workflows/: docs-build_and_deploy.yml
images/: placeholders
src/: app.rs  components.rs  lib.rs  pages.rs
src/components/: code.rs  description.rs  nav.rs  preview.rs
src/pages/: columns.rs  components.rs  elements.rs  form.rs  home.rs  layout.rs
src/pages/columns/: basics.rs  gap.rs  nesting.rs  options.rs  responsiveness.rs  sizes.rs
src/pages/components/: menu.rs  message.rs  pagination.rs
src/pages/elements/: block.rs  content.rs  delete.rs  icon.rs  image.rs  notification.rs  progress.rs  table.rs  tag.rs  title.rs
src/pages/form/: general.rs
src/pages/layout/: container.rs  footer.rs  media_object.rs
