[package]
name = "ybc-cp"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-utils = "0.1.2"
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"] }
ybc = "0.4.0-beta.0"
yew = { version = "0.20", features = ["csr"]}
yew-router = "0.17"
web-sys = { version = "0.3", features = ["Document", "Window"] }
